--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,17 +28,39 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.5.jar=H:\\libraries\\poi-3.9\\lib\\commons-codec-1.5.jar
+file.reference.commons-codec-1.5.jar-1=F:\\backup\\lib\\commons-codec-1.5.jar
+file.reference.commons-codec-1.5.jar-2=F:\\PhanMemBanHang\\lib\\commons-codec-1.5.jar
 file.reference.commons-logging-1.1.jar=H:\\libraries\\poi-3.9\\lib\\commons-logging-1.1.jar
+file.reference.commons-logging-1.1.jar-1=F:\\backup\\lib\\commons-logging-1.1.jar
+file.reference.commons-logging-1.1.jar-2=F:\\PhanMemBanHang\\lib\\commons-logging-1.1.jar
 file.reference.core.jar=C:\\Users\\Binh\\Downloads\\sauvan\\zxing-2.1\\core\\core.jar
+file.reference.core.jar-1=F:\\PhanMemBanHang\\lib\\core.jar
 file.reference.javase.jar=C:\\Users\\Binh\\Downloads\\sauvan\\zxing-2.1\\javase\\javase.jar
+file.reference.javase.jar-1=F:\\PhanMemBanHang\\lib\\javase.jar
 file.reference.junit-3.8.1.jar=H:\\libraries\\poi-3.9\\lib\\junit-3.8.1.jar
+file.reference.junit-3.8.1.jar-1=F:\\backup\\lib\\junit-3.8.1.jar
+file.reference.junit-3.8.1.jar-2=F:\\PhanMemBanHang\\lib\\junit-3.8.1.jar
 file.reference.log4j-1.2.13.jar=H:\\libraries\\poi-3.9\\lib\\log4j-1.2.13.jar
+file.reference.log4j-1.2.13.jar-1=F:\\backup\\lib\\log4j-1.2.13.jar
+file.reference.log4j-1.2.13.jar-2=F:\\PhanMemBanHang\\lib\\log4j-1.2.13.jar
 file.reference.poi-3.9-20121203.jar=H:\\libraries\\poi-3.9\\poi-3.9-20121203.jar
+file.reference.poi-3.9-20121203.jar-1=F:\\backup\\lib\\poi-3.9-20121203.jar
+file.reference.poi-3.9-20121203.jar-2=F:\\PhanMemBanHang\\lib\\poi-3.9-20121203.jar
 file.reference.poi-examples-3.9-20121203.jar=H:\\libraries\\poi-3.9\\poi-examples-3.9-20121203.jar
+file.reference.poi-examples-3.9-20121203.jar-1=F:\\backup\\lib\\poi-examples-3.9-20121203.jar
+file.reference.poi-examples-3.9-20121203.jar-2=F:\\PhanMemBanHang\\lib\\poi-examples-3.9-20121203.jar
 file.reference.poi-excelant-3.9-20121203.jar=H:\\libraries\\poi-3.9\\poi-excelant-3.9-20121203.jar
+file.reference.poi-excelant-3.9-20121203.jar-1=F:\\backup\\lib\\poi-excelant-3.9-20121203.jar
+file.reference.poi-excelant-3.9-20121203.jar-2=F:\\PhanMemBanHang\\lib\\poi-excelant-3.9-20121203.jar
 file.reference.poi-ooxml-3.9-20121203.jar=H:\\libraries\\poi-3.9\\poi-ooxml-3.9-20121203.jar
+file.reference.poi-ooxml-3.9-20121203.jar-1=F:\\backup\\lib\\poi-ooxml-3.9-20121203.jar
+file.reference.poi-ooxml-3.9-20121203.jar-2=F:\\PhanMemBanHang\\lib\\poi-ooxml-3.9-20121203.jar
 file.reference.poi-ooxml-schemas-3.9-20121203.jar=H:\\libraries\\poi-3.9\\poi-ooxml-schemas-3.9-20121203.jar
+file.reference.poi-ooxml-schemas-3.9-20121203.jar-1=F:\\backup\\lib\\poi-ooxml-schemas-3.9-20121203.jar
+file.reference.poi-ooxml-schemas-3.9-20121203.jar-2=F:\\PhanMemBanHang\\lib\\poi-ooxml-schemas-3.9-20121203.jar
 file.reference.poi-scratchpad-3.9-20121203.jar=H:\\libraries\\poi-3.9\\poi-scratchpad-3.9-20121203.jar
+file.reference.poi-scratchpad-3.9-20121203.jar-1=F:\\backup\\lib\\poi-scratchpad-3.9-20121203.jar
+file.reference.poi-scratchpad-3.9-20121203.jar-2=F:\\PhanMemBanHang\\lib\\poi-scratchpad-3.9-20121203.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -55,7 +77,29 @@ javac.classpath=\
     ${file.reference.junit-3.8.1.jar}:\
     ${file.reference.log4j-1.2.13.jar}:\
     ${file.reference.javase.jar}:\
-    ${file.reference.core.jar}
+    ${file.reference.core.jar}:\
+    ${file.reference.commons-codec-1.5.jar-1}:\
+    ${file.reference.commons-logging-1.1.jar-1}:\
+    ${file.reference.junit-3.8.1.jar-1}:\
+    ${file.reference.log4j-1.2.13.jar-1}:\
+    ${file.reference.poi-3.9-20121203.jar-1}:\
+    ${file.reference.poi-examples-3.9-20121203.jar-1}:\
+    ${file.reference.poi-excelant-3.9-20121203.jar-1}:\
+    ${file.reference.poi-ooxml-3.9-20121203.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-3.9-20121203.jar-1}:\
+    ${file.reference.poi-scratchpad-3.9-20121203.jar-1}:\
+    ${file.reference.commons-codec-1.5.jar-2}:\
+    ${file.reference.commons-logging-1.1.jar-2}:\
+    ${file.reference.core.jar-1}:\
+    ${file.reference.javase.jar-1}:\
+    ${file.reference.junit-3.8.1.jar-2}:\
+    ${file.reference.log4j-1.2.13.jar-2}:\
+    ${file.reference.poi-3.9-20121203.jar-2}:\
+    ${file.reference.poi-examples-3.9-20121203.jar-2}:\
+    ${file.reference.poi-excelant-3.9-20121203.jar-2}:\
+    ${file.reference.poi-ooxml-3.9-20121203.jar-2}:\
+    ${file.reference.poi-ooxml-schemas-3.9-20121203.jar-2}:\
+    ${file.reference.poi-scratchpad-3.9-20121203.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
