--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -132,7 +132,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=sale.Sale
+main.class=sale.Sale_main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
